@@ -172,7 +172,7 @@ public final class ConnectionValidator {
 
         if (!ackLabel.isFullyResolved()) {
             return connectionIdResolver.resolve(ackLabel.toString())
-                    .toOptional()
+                    .findFirst()
                     .map(AcknowledgementLabel::of);
         } else {
             return Optional.of(ackLabel);
@@ -355,7 +355,7 @@ public final class ConnectionValidator {
         // labels in order to give the AcknowledgementLabelInvalidException priority
         final List<String> targetAckLabels = getTargetIssuedAcknowledgementLabels(connection)
                 .map(Object::toString)
-                .collect(Collectors.toList());
+                .toList();
         final Set<String> distinctTargetAckLabels = new HashSet<>(targetAckLabels);
         if (targetAckLabels.size() > distinctTargetAckLabels.size()) {
             throw AcknowledgementLabelNotUniqueException.newBuilder()
