@@ -19,7 +19,6 @@ import java.util.Collection;
 import java.util.List;
 import java.util.Optional;
 import java.util.concurrent.TimeUnit;
-import java.util.stream.Collectors;
 
 import org.eclipse.ditto.base.model.acks.AcknowledgementRequest;
 import org.eclipse.ditto.base.model.acks.DittoAcknowledgementLabel;
@@ -62,7 +61,7 @@ public final class MessageMappingProcessorActorHeaderInteractionTest extends Abs
                                 )
                         )
                 )
-        ).collect(Collectors.toList());
+        ).toList();
     }
 
     private final Duration timeout;
