@@ -23,7 +23,6 @@ import static org.mutabilitydetector.unittesting.MutabilityMatchers.areImmutable
 
 import java.time.Duration;
 import java.util.Map;
-import java.util.stream.Collectors;
 
 import org.assertj.core.api.Assertions;
 import org.assertj.core.api.ThrowableAssertAlternative;
@@ -173,7 +172,7 @@ public final class Mqtt3ValidatorTest extends AbstractMqttValidatorTest {
     }
 
     @Test
-    public void testInvalidSourceTopicFilters() {
+    public void testInvalidSourceEnforcementFilters() {
         final Source mqttSourceWithValidFilter = ConnectivityModelFactory.newSourceBuilder()
                 .authorizationContext(AUTHORIZATION_CONTEXT)
                 .enforcement(newSourceAddressEnforcement("things/+/{{ thing:id }}/#"))
@@ -182,12 +181,12 @@ public final class Mqtt3ValidatorTest extends AbstractMqttValidatorTest {
                 .build();
         final Source mqttSourceWithInvalidFilter = ConnectivityModelFactory.newSourceBuilder()
                 .authorizationContext(AUTHORIZATION_CONTEXT)
-                .enforcement(newSourceAddressEnforcement("things/#/{{ thing:id }}/+"))
+                .enforcement(newSourceAddressEnforcement("things/+/{{ thing:wasd }}/#"))
                 .address("#")
                 .qos(1)
                 .build();
 
-        testInvalidSourceTopicFilters(mqttSourceWithValidFilter, mqttSourceWithInvalidFilter);
+        testInvalidSourceEnforcementFilters(mqttSourceWithValidFilter, mqttSourceWithInvalidFilter);
     }
 
     @Test
@@ -200,7 +199,7 @@ public final class Mqtt3ValidatorTest extends AbstractMqttValidatorTest {
                         .qos(1)
                         .build();
 
-        testInvalidSourceTopicFilters(mqttSourceWithInvalidFilter);
+        testInvalidSourceEnforcementFilters(mqttSourceWithInvalidFilter);
     }
 
     @Test
@@ -313,7 +312,7 @@ public final class Mqtt3ValidatorTest extends AbstractMqttValidatorTest {
                         .map(ConnectivityModelFactory::newSourceBuilder)
                         .map(sb -> sb.headerMapping(headerMapping))
                         .map(SourceBuilder::build)
-                        .collect(Collectors.toList())).build();
+                        .toList()).build();
     }
 
     private void testTargetMapping(final HeaderMapping headerMapping, final String containedInMessage) {
@@ -329,7 +328,7 @@ public final class Mqtt3ValidatorTest extends AbstractMqttValidatorTest {
                         .map(ConnectivityModelFactory::newTargetBuilder)
                         .map(sb -> sb.headerMapping(headerMapping))
                         .map(TargetBuilder::build)
-                        .collect(Collectors.toList())).build();
+                        .toList()).build();
     }
 
     @Override
