@@ -18,7 +18,6 @@ import java.util.Collections;
 import java.util.List;
 import java.util.Objects;
 import java.util.Optional;
-import java.util.stream.Collectors;
 import java.util.stream.Stream;
 
 import javax.annotation.Nullable;
@@ -53,7 +52,6 @@ public final class Metadata {
     private final List<ActorRef> senders;
     private final boolean invalidateThing;
     private final boolean invalidatePolicy;
-    @Nullable private final ActorRef origin;
     private final List<UpdateReason> updateReasons;
 
     private Metadata(final ThingId thingId,
@@ -66,7 +64,6 @@ public final class Metadata {
             final Collection<ActorRef> senders,
             final boolean invalidateThing,
             final boolean invalidatePolicy,
-            @Nullable final ActorRef origin,
             final Collection<UpdateReason> updateReasons) {
 
         this.thingId = thingId;
@@ -79,7 +76,6 @@ public final class Metadata {
         this.senders = List.copyOf(senders);
         this.invalidateThing = invalidateThing;
         this.invalidatePolicy = invalidatePolicy;
-        this.origin = origin;
         this.updateReasons = List.copyOf(updateReasons);
     }
 
@@ -100,7 +96,7 @@ public final class Metadata {
             @Nullable final StartedTimer timer) {
 
         return new Metadata(thingId, thingRevision, policyId, policyRevision, null,
-                List.of(), null != timer ? List.of(timer) : List.of(), List.of(), false, false, null,
+                List.of(), null != timer ? List.of(timer) : List.of(), List.of(), false, false,
                 List.of(UpdateReason.UNKNOWN));
     }
 
@@ -125,7 +121,7 @@ public final class Metadata {
 
         return new Metadata(thingId, thingRevision, policyId, policyRevision, null, events,
                 null != timer ? List.of(timer) : List.of(),
-                null != sender ? List.of(sender) : List.of(), false, false, null, List.of(UpdateReason.UNKNOWN));
+                null != sender ? List.of(sender) : List.of(), false, false, List.of(UpdateReason.UNKNOWN));
     }
 
     /**
@@ -139,6 +135,7 @@ public final class Metadata {
      * @param events the events included in the metadata causing the search update.
      * @param timers the timers measuring the search updater's consistency lag.
      * @param senders the senders.
+     * @param updateReasons the update reasons.
      * @return the new Metadata object.
      */
     public static Metadata of(final ThingId thingId,
@@ -148,10 +145,11 @@ public final class Metadata {
             @Nullable final Instant modified,
             final List<ThingEvent<?>> events,
             final Collection<StartedTimer> timers,
-            final Collection<ActorRef> senders) {
+            final Collection<ActorRef> senders,
+            final Collection<UpdateReason> updateReasons) {
 
         return new Metadata(thingId, thingRevision, policyId, policyRevision, modified, events, timers, senders,
-                false, false, null, List.of(UpdateReason.UNKNOWN));
+                false, false, updateReasons);
     }
 
     /**
@@ -173,8 +171,18 @@ public final class Metadata {
             @Nullable final StartedTimer timer) {
 
         return new Metadata(thingId, thingRevision, policyId, policyRevision, modified,
-                List.of(), null != timer ? List.of(timer) : List.of(), List.of(), false, false, null,
+                List.of(), null != timer ? List.of(timer) : List.of(), List.of(), false, false,
                 List.of(UpdateReason.UNKNOWN));
+    }
+
+    /**
+     * Return a Metadata object for a deleted Thing.
+     *
+     * @param thingId the ID of the deleted thing.
+     * @return the Metadata object.
+     */
+    public static Metadata ofDeleted(final ThingId thingId) {
+        return Metadata.of(thingId, -1, null, null, null);
     }
 
     /**
@@ -191,6 +199,15 @@ public final class Metadata {
     }
 
     /**
+     * Create a copy of this object containing only the IDs and revisions of the thing and policy.
+     *
+     * @return the exported metadata.
+     */
+    public Metadata export() {
+        return Metadata.of(thingId, thingRevision, policyId, policyRevision, null);
+    }
+
+    /**
      * Create a copy of this metadata requesting cache invalidation.
      *
      * @param invalidateThing whether to invalidate the cached thing.
@@ -199,17 +216,7 @@ public final class Metadata {
      */
     public Metadata invalidateCaches(final boolean invalidateThing, final boolean invalidatePolicy) {
         return new Metadata(thingId, thingRevision, policyId, policyRevision, modified, events, timers, senders,
-                invalidateThing, invalidatePolicy, origin, updateReasons);
-    }
-
-    /**
-     * Create a copy of this metadata with origin.
-     *
-     * @return the copy.
-     */
-    public Metadata withOrigin(@Nullable final ActorRef origin) {
-        return new Metadata(thingId, thingRevision, policyId, policyRevision, modified, events, timers, senders,
-                invalidateThing, invalidatePolicy, origin, updateReasons);
+                invalidateThing, invalidatePolicy, updateReasons);
     }
 
     /**
@@ -219,7 +226,7 @@ public final class Metadata {
      */
     public Metadata withSender(final ActorRef sender) {
         return new Metadata(thingId, thingRevision, policyId, policyRevision, modified, events, timers, List.of(sender),
-                invalidateThing, invalidatePolicy, origin, updateReasons);
+                invalidateThing, invalidatePolicy, updateReasons);
     }
 
     /**
@@ -229,16 +236,7 @@ public final class Metadata {
      */
     public Metadata withUpdateReason(final UpdateReason reason) {
         return new Metadata(thingId, thingRevision, policyId, policyRevision, modified, events, timers, senders,
-                invalidateThing, invalidatePolicy, origin, List.of(reason));
-    }
-
-    /**
-     * Return the ThingUpdater that created this object, if any.
-     *
-     * @return The ThingUpdater.
-     */
-    public Optional<ActorRef> getOrigin() {
-        return Optional.ofNullable(origin);
+                invalidateThing, invalidatePolicy, List.of(reason));
     }
 
     /**
@@ -379,19 +377,16 @@ public final class Metadata {
      * @return the new metadata with concatenated senders.
      */
     public Metadata append(final Metadata newMetadata) {
-        final List<ThingEvent<?>> newEvents =
-                Stream.concat(events.stream(), newMetadata.events.stream()).collect(Collectors.toList());
-        final List<StartedTimer> newTimers =
-                Stream.concat(timers.stream(), newMetadata.timers.stream()).collect(Collectors.toList());
-        final List<ActorRef> newSenders =
-                Stream.concat(senders.stream(), newMetadata.senders.stream()).collect(Collectors.toList());
-        final List<UpdateReason> newReasons =
-                Stream.concat(updateReasons.stream(), newMetadata.updateReasons.stream()).collect(Collectors.toList());
+        final List<ThingEvent<?>> newEvents = Stream.concat(events.stream(), newMetadata.events.stream()).toList();
+        final List<StartedTimer> newTimers = Stream.concat(timers.stream(), newMetadata.timers.stream()).toList();
+        final List<ActorRef> newSenders = Stream.concat(senders.stream(), newMetadata.senders.stream()).toList();
+        final List<UpdateReason> newReasons = Stream.concat(updateReasons.stream(), newMetadata.updateReasons.stream())
+                .toList();
         return new Metadata(newMetadata.thingId, newMetadata.thingRevision, newMetadata.policyId,
                 newMetadata.policyRevision, newMetadata.modified, newEvents, newTimers, newSenders,
                 invalidateThing || newMetadata.invalidateThing,
                 invalidatePolicy || newMetadata.invalidatePolicy,
-                newMetadata.origin, newReasons);
+                newReasons);
     }
 
     /**
@@ -447,14 +442,13 @@ public final class Metadata {
                 Objects.equals(senders, that.senders) &&
                 invalidateThing == that.invalidateThing &&
                 invalidatePolicy == that.invalidatePolicy &&
-                Objects.equals(origin, that.origin) &&
                 Objects.equals(updateReasons, that.updateReasons);
     }
 
     @Override
     public int hashCode() {
         return Objects.hash(thingId, thingRevision, policyId, policyRevision, modified, events, timers, senders,
-                invalidateThing, invalidatePolicy, origin, updateReasons);
+                invalidateThing, invalidatePolicy, updateReasons);
     }
 
     @Override
@@ -470,7 +464,6 @@ public final class Metadata {
                 ", senders=" + senders +
                 ", invalidateThing=" + invalidateThing +
                 ", invalidatePolicy=" + invalidatePolicy +
-                ", origin=" + origin +
                 ", updateReasons=" + updateReasons +
                 "]";
     }
